--- a/rapport/images.tex
+++ b/rapport/images.tex
@@ -20,7 +20,13 @@
 \label{fig:kibanatuto4}
 \caption{Le tableau des champs}
 \end{figure}
-
+\paragraph{}
+\begin{figure}[H]
+\center
+\includegraphics[width=0.8\textwidth]{kibanatuto/rap/17.png}
+\label{fig:kibanatuto10}
+\caption{Choix des visualisations}
+\end{figure}
 \paragraph{}
 \begin{figure}[H]
 \center
