--- a/rapport/kibana.tex
+++ b/rapport/kibana.tex
@@ -4,7 +4,7 @@
 \label{fig:kibana.png}
 \end{figure}
 \section{Qu'est ce que Kibana}
-Kibana est à la fois un front-end à Elasticsearch permettant de présenter les données. 
+Kibana est un front-end à Elasticsearch permettant de présenter les données stockées dans ce dernier. 
 
 C'est l'outil de visualisation officiel d'Elasticsearch, il est assez ergonomique 
 et donc plutôt facile d'utilisation. Sa barre de recherche utilise la syntaxe 
@@ -170,15 +170,9 @@ La création de ces dashboards est également très simple, on en créer un nouv
 appuyant sur le plus à droite.
 
 Il suffit ensuite de choisir les visualisation et ou les recherches enregistrées 
-que l'on souhaite voir affiché.
+que l'on souhaite voir affiché.\\[2mm]
 
-\begin{figure}[H]
-\center
-\includegraphics[width=0.8\textwidth]{kibanatuto/rap/17.png}
-\label{fig:kibanatuto10}
-\caption{Choix des visualisations}
-\end{figure}
-
+    Voir l'image des \textbf{recherches et de la visualisation} p\pageref{fig:kibanatuto10}\\[2mm]
 Comme expliqué plus haut les visualisations ainsi que les tableaux sont interactifs.
 Il est par exemple possible de façon assez intuitive faire une recherche limitée ségréguée.
 Ici il suffit de cliquer sur le quartier désiré de la visualisation. Cela aura pour 
@@ -194,8 +188,16 @@ pour ip source 147.99.x.x affiché sur l'image ci-dessous.
 \end{figure}
 
 Il est possible de partager facilement ces dashboard, via des liens avec 
-iframes. On peut ainsi facilement les ajouter dans une page de monitoring par exemple.\\[3mm]
+iframes. On peut ainsi facilement les ajouter dans une page de monitoring par exemple.\\[2mm]
+Voir l'image d'un \textbf{Dashboard plus avancé} p\pageref{fig:kibanatuto12}\\[2mm]
+Partie non essentielle sur les \textbf{settings} p\pageref{subsec:settings}
 
-Voir l'image d'un Dashboard plus avancé p\pageref{fig:kibanatuto12}\\[2mm]
-Partie non essentielle sur les \emph{settings} p\pageref{subsec:settings}
+\section{Conclusion}
+Voici qui conclue la présentation des logiciels majeurs que nous avons
+utilisé pour réaliser ce projet. Nous avons maintenant compris comment
+centraliser et exporter les données, les ranger et maintenant les consulter
 
+Kibana est sans doute le plus facile (des trois présentés) à prendre en main, et c'est heureux 
+car c'est celui avec lequel l'équipe interagira au quotidien.
+
+Kibana facilite beaucoup l'exploration de données et permet, par l'intermédiaire des Dashboard,  de faciliter leur mise en corrélation.
