--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -172,8 +172,12 @@ qu'à proposer quelques pistes d'amélioration.
 \chapter{Environnement}
 J'ai réalisé mon stage de Licence professionnelle ASRALL, dans l'équipe réseau Lothaire.
 Cette équipe dépend de la Sous Direction des Infrastructures, membre de la Direction 
-du Numérique de l'Université de Lorraine. Son rôle est d'opérer le réseau des 
-établissements scolaires et de recherche de la région Lorraine, le réseau Lothaire.
+du Numérique\footnote{La Direction du Numérique est chargée de la stratégie et de la 
+mise en place d'une politique numérique à l'université. Ses missions s'étendent du maintien 
+des infrastructures systèmes et réseaux à la promotion des usages du numérique en passant
+par le développement d'applications spécifiques} de l'Université de Lorraine. Son rôle est 
+d'opérer le réseau des établissements scolaires et de recherche de la région Lorraine, le 
+réseau Lothaire.
 \section{Réseau Lothaire}
 \begin{figure}[H]
 \center
