modifications en tout genre (concentré sur logstash)

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -152,7 +152,7 @@ l'horizontal.
 Lors de notre étude de Logstash nous nous concentrerons sur l'exploitation de syslogs. 
 Il est possible de faire d'autres choses avec ce logiciel, notamment concernant, 
 l'exploitation des logs d'apache. 
-Ce qui sera présenter fournira tout de même une base solide des possibilités offertes
+Ce qui sera présenté fournira tout de même une base solide des possibilités offertes
 par Logstash.
 
 
@@ -162,9 +162,10 @@ présentation des objectifs.
 
 La seconde partie présente l'utilisation et le fonctionnement des principaux logiciels
 utilisés dans le projet. Pour des raisons de lisibilité certains passages moins 
-essentiels ont été déplacés en Annexe.
+essentiels ont été déplacés en Annexe. C'est à la fin de la partie sur Logstash que
+sera présenté notre infrastructure.
 
-Enfin la troisième partie, qui conclura ce rapport,  présente la solution retenue 
+Enfin, la troisième partie, qui conclura ce rapport,  présente la solution retenue 
 pour la mise en production. Elle sert également à faire le bilan du projet ainsi 
 qu'à proposer quelques pistes d'amélioration.
 
@@ -198,7 +199,7 @@ en annexes)
 
 \subsection{Historique, rôle et organigramme}
 
-Avant la création de \emph{l'Université de Lorraine} au 1er Janvier 2012 l'équipe 
+Avant la création de \emph{l'Université de Lorraine} au 1er Janvier 2012, l'équipe
 réseau Lothaire était attachée au CIRIL (Centre Interuniversitaire de Ressources Informatiques
 de Lorraine). Depuis, l'organisme a été absorbé par la Sous Direction des Infrastructures
 de l'université.
@@ -229,7 +230,7 @@ que d'un enseignant chercheur détaché.
 
 
 \section{Environnement de travail}
-J'ai physiquement réalisé mon stage dans un bureau, en compagnie d'un autre stagiaire.
+J'ai, physiquement, réalisé mon stage dans un bureau, en compagnie d'un autre stagiaire.
 Ma machine de travail était un ordinateur fixe Dell. Il m'a été laissé une grande 
 liberté quant à l'installation de mon système d'exploitation, j'ai donc choisi une 
 classique Debian GNU/Linux.
@@ -242,7 +243,7 @@ la fin du stage, de machines de production. Un Dell R520 (12 cœurs, 12Go de RAM
 la machine qui fera tourner Elasticsearch et un Dell 2950 (4 coeurs 4 Go de RAM)
 la machine qui accueillera le Logstash qui traitant tous les logs.
 
-Par cohérence avec le reste de l'infrastructure il a été décidé d'installer une 
+Par cohérence avec le reste de l'infrastructure, il a été décidé d'installer une 
 Debian Jessie, nouvellement stable au moment de l'installation.
 %\chapter{La gestion de logs}
 %
